--- a/404.md
+++ b/404.md
@@ -2,4 +2,6 @@
 permalink: /404.html
 ---
 
+## Fly, you fools!
+
 The URL you seek does not exist. For the latest version of the documentation, click [here](https://gdalle.github.io/Test404/)
